modify all files